[package]
name = "tsl2591"
description = "embedded hal driver for the TSL2591"
homepage = "https://github.com/pcvonz/tsl2591-rs"
version = "0.2.0"
authors = ["Paul <pcvonz@gmail.com>"]
edition = "2018"
repository = "https://github.com/pcvonz/tsl2591-rs"
license = "MIT OR Apache-2.0"
keywords = ["embedded-hal"]
categories = ["embedded"]

[dependencies]
embedded-hal = { version = "1.0.0-rc.1", optional = true }
embedded-hal-async = { version = "1.0.0-rc.1", optional = true }
bitfield = "0.13.2"

[features]
default = []
blocking = ["dep:embedded-hal"]
async = ["dep:embedded-hal-async"]
