[package]
name = "my_stm"
version = "0.1.0"
authors = ["Paul <pcvonz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
panic-semihosting = "0.5"
panic-itm = "0.4.2"
tsl2591 = { path = ".." }

[dependencies.stm32f3xx-hal]
features = ["stm32f303xc"]
version = "0.6.1"

